--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,9 +9,9 @@ source:
   sha256: 4bc2085c29ac8645fd859c1a0cbcd51f0216f6ec260da42aaac49e89b8dda807
 
 build:
-  number: 3
+  number: 4
   noarch: python
-  script: python -m build --skip-dependency-check --no-isolation .
+  script: python -m pip install . -vv
 
 outputs:
   # web api package
@@ -19,9 +19,7 @@ outputs:
     requirements:
       host:
         - python >=3.9
-        - build
-        - setuptools
-        - wheel
+        - pip
       run:
         - python >=3.9
         - compass-interface-core >=0.20.0
@@ -39,9 +37,7 @@ outputs:
     requirements:
       host:
         - python >=3.9
-        - build
-        - setuptools
-        - wheel
+        - pip
       run:
         - python >=3.9
         - compass-interface-core >=0.20.0
@@ -57,9 +53,7 @@ outputs:
     requirements:
       host:
         - python >=3.9
-        - build
-        - setuptools
-        - wheel
+        - pip
       run:
         - python >=3.9
         - compass-interface-core >=0.20.0
