--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ build:
 outputs:
   # web api package
   - name: compass-interface-http
+    script: python -m pip install . -vv
     requirements:
       host:
         - python >=3.9
@@ -34,6 +35,7 @@ outputs:
 
   # tabluar interface package
   - name: compass-interface-pandas
+    script: python -m pip install . -vv
     requirements:
       host:
         - python >=3.9
