--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,9 @@ build:
 outputs:
   # web api package
   - name: compass-interface-http
-    script: python -m pip install . -vv
+    build:
+      noarch: python
+      script: python -m pip install . -vv
     requirements:
       host:
         - python >=3.9
@@ -35,7 +37,9 @@ outputs:
 
   # tabluar interface package
   - name: compass-interface-pandas
-    script: python -m pip install . -vv
+    build:
+      noarch: python
+      script: python -m pip install . -vv
     requirements:
       host:
         - python >=3.9
