--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,7 @@
 conda_forge_output_validation: true
+azure:
+  # toggle for storing the conda build_artifacts directory (including the
+  # built packages) as an Azure pipeline artifact that can be downloaded
+  store_build_artifacts: true
 bot:
   automerge: true
