--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,5 @@
 {% set version = "0.24.1" %}
+{% set minimum_core = "0.20.0" %}
 
 package:
   name: compass-interface
@@ -9,9 +10,7 @@ source:
   sha256: 4bc2085c29ac8645fd859c1a0cbcd51f0216f6ec260da42aaac49e89b8dda807
 
 build:
-  number: 8
-#   noarch: python
-#   script: python -m pip install . -vv
+  number: 9
 
 outputs:
   # omni package
@@ -23,7 +22,7 @@ outputs:
         - python >=3.9
       run:
         - {{ pin_subpackage('compass-interface-http', exact=True) }}
-    #    - {{ pin_subpackage('compass-interface-pandas', exact=True) }}
+        - {{ pin_subpackage('compass-interface-pandas', exact=True) }}
     test:
       imports:
         - compass
@@ -42,7 +41,7 @@ outputs:
         - pip
       run:
         - python >=3.9
-        - compass-interface-core >=0.20.0
+        - compass-interface-core >={{ minimum_core }}
         - fastapi
         - cryptography
         - python-jose
@@ -52,25 +51,24 @@ outputs:
         - compass
         - compass.core
 
-  #   # tabluar interface package
-  #   - name: compass-interface-pandas
-  #     noarch: python
-  #     build:
-  #       noarch: python
-  #       script: python -m pip install compass -vv
-  #     requirements:
-  #       host:
-  #         - python >=3.9
-  #         - pip
-  #       run:
-  #         - python >=3.9
-  #         - compass-interface-core >=0.20.0
-  #         - pandas
-  #         - pyarrow
-  #     test:
-  #       imports:
-  #         - compass
-  #         - compass.core
+    # tabluar interface package
+    - name: compass-interface-pandas
+      build:
+        noarch: python
+        script: python -m pip install . --no-deps --ignore-installed -vv
+      requirements:
+        host:
+          - python >=3.9
+          - pip
+        run:
+          - python >=3.9
+          - compass-interface-core >={{ minimum_core }}
+          - pandas
+          - pyarrow
+      test:
+        imports:
+          - compass
+          - compass.core
 
 about:
   home: https://github.com/the-scouts/compass-interface
