--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,29 +46,29 @@ outputs:
         - cryptography
         - python-jose
         - python-multipart
-    test:
-      imports:
-        - compass
-        - compass.core
-
-    # tabluar interface package
-    - name: compass-interface-pandas
-      build:
-        noarch: python
-        script: python -m pip install . --no-deps --ignore-installed -vv
-      requirements:
-        host:
-          - python >=3.9
-          - pip
-        run:
-          - python >=3.9
-          - compass-interface-core >={{ minimum_core }}
-          - pandas
-          - pyarrow
       test:
         imports:
           - compass
           - compass.core
+
+  # tabular interface package
+  - name: compass-interface-pandas
+    build:
+      noarch: python
+      script: python -m pip install . --no-deps --ignore-installed -vv
+    requirements:
+      host:
+        - python >=3.9
+        - pip
+      run:
+        - python >=3.9
+        - compass-interface-core >={{ minimum_core }}
+        - pandas
+        - pyarrow
+    test:
+      imports:
+        - compass
+        - compass.core
 
 about:
   home: https://github.com/the-scouts/compass-interface
@@ -78,7 +78,7 @@ about:
 #  description: |
 #    longer description
   dev_url: https://github.com/the-scouts/compass-interface
-#  doc_url: 
+#  doc_url:
 
 extra:
   recipe-maintainers:
